Add changes to text color and stylesheet

--- a/src/app/components/register/register-view/register-view.component.html
+++ b/src/app/components/register/register-view/register-view.component.html
@@ -38,14 +38,13 @@
           </button>
         </mat-form-field>
       </p>
-      <p>
-        <mat-checkbox class="checkbox-margin">Acepto los términos y condiciones</mat-checkbox>
-      </p>
-      <p>
-        <mat-slide-toggle class="slide-toggle black-text">
-          ¿Es una cuenta de veterinario?
-        </mat-slide-toggle>
-      </p>
+
+      <mat-checkbox class="example-margin"><p>Acepto los términos y condiciones</p></mat-checkbox>
+      <br>
+      <mat-slide-toggle class="slide-toggle black-text">
+        <p>¿Es una cuenta de veterinario?</p>
+      </mat-slide-toggle>
+
       <div class="register-button-container">
         <button mat-flat-button class="full-width-button" color="accent">Registrate</button>
         <p class="redirect-label"><a href="/login">¿Ya tienes una cuenta?</a></p>
