--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; color: black}
-body { margin: 0; font-family: Montserrat, "Helvetica Neue", sans-serif; color: black}
+html, body { height: 100%; color: black;}
+body { margin: 0; font-family: Montserrat, "Helvetica Neue", sans-serif; color: black;}
