--- a/src/app/components/register-view/register-view.component.html
+++ b/src/app/components/register-view/register-view.component.html
@@ -52,6 +52,6 @@
     </form>
   </div>
   <div class="registration-image">
-    <img src="assets/login-register-dog.jpg" alt="login-register-dog-image">
+    <img src="../../../assets/login-register-dog.jpg" alt="login-register-dog-image">
   </div>
 </div>
