--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -3,12 +3,12 @@
     <img mat-card-image src="../../../assets/logo1.png" alt="logo">
   </div>
   <div>
-    <a mat-button class="action-button" [href]="[]" target="_blank">Inicio</a>
-    <a mat-button class="action-button" [href]="[]" target="_blank">Servicios</a>
-    <a mat-button class="action-button" [href]="[]" target="_blank">Veterinarias</a>
-    <a mat-button class="action-button" [href]="[]" target="_blank">Productos</a>
-    <a mat-button class="action-button" [href]="[]" target="_blank">Citas</a>
-    <a mat-button class="action-button" [href]="[]" target="_blank">Contáctanos</a>
+    <a mat-button class="action-button" routerLink="/home">Inicio</a>
+    <a mat-button class="action-button" routerLink="/services">Servicios</a>
+    <a mat-button class="action-button" routerLink="/veterinary">Veterinarias</a>
+    <a mat-button class="action-button" routerLink="/products">Productos</a>
+    <a mat-button class="action-button" routerLink="/booking">Citas</a>
+    <a mat-button class="action-button" routerLink="/contact-us">Contáctanos</a>
     <!--<a [routerLink]="[]" (click)="clickMethod()">Your Link</a>-->
   </div>
   <span class="example-spacer"></span>
