Added ÃÃsupport component, register component, profile component and booking component with routing

--- a/src/app/components/login-view/login-view.component.html
+++ b/src/app/components/login-view/login-view.component.html
@@ -20,8 +20,8 @@
         <a class="forgot-password" href="/forgotpassword">Olvidaste tu contraseña?</a>
 
       <div class="register-button-container">
-        <button mat-flat-button class="full-width-button" color="accent">Iniciar Sesion</button>
-        <p class="redirect-label"><a href="/login">¿No tienes cuenta? Regístrate</a></p>
+        <button mat-flat-button class="full-width-button" color="accent" routerLink="/home">Iniciar Sesion</button>
+        <p class="redirect-label"><a href="/signup">¿No tienes cuenta? Regístrate</a></p>
       </div>
     </form>
   </div>
