--- a/src/app/components/register-view/register-view.component.html
+++ b/src/app/components/register-view/register-view.component.html
@@ -46,7 +46,7 @@
       </mat-slide-toggle>
 
       <div class="register-button-container">
-        <button mat-flat-button class="full-width-button" color="accent">Registrate</button>
+        <button mat-flat-button class="full-width-button" color="accent" routerLink="/home">Registrate</button>
         <p class="redirect-label"><a href="/login">¿Ya tienes una cuenta?</a></p>
       </div>
     </form>
